--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
+.Rbuildignore
+.gitignore
+.DS_Store
 others/
 Analysis_SD/
 Analysis/
 fit/
 older/
 estimate_treedater.R
-
+*.tre
+*.tree
+*.fasta
