--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: San Diego Benefits Analyses
+Package: migrations
 Type: Package
 Title: Scripts to simulate and analyses HIV sequencing data
 Version: 0.1.0
 Author: Fabricia F. Nascimento
 Maintainer: Fabricia F. Nascimento <thednainus@yahoo.com>
 Description: These packages is a collection of scripts to create the simulations,
-    analyses the simulate data and plot relevant statistics to estimate
-    migration rates.
+    analyse the simulate data and plot relevant statistics to estimate
+    migration rates using different phylodynamic or phylogeographic methods.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
